--- a/views/quizes/question.htm
+++ b/views/quizes/question.htm
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h2>Quiz: el juego de las preguntas</h2>
-    <p><%= respuesta%></p>
-    <p><a href='/quizes/question'> intentalo otra vez</a></p>
+    <p><%= repuesta%></p>
+    <p><a href='quizes/question'> intentalo otra vez</a></p>
   </body>
 </html>
