--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
 	</section>
 	<footer class="main" id="f1">
 		<a href="http://es.wikipedia.org/wiki/Quiz">¿Que es Quiz?</a>
+		<a href="https://github.com/Damadi/Servidor-Quiz-desde-cero">Proyecto en GitHub</a>
 	</footer>
   </body>
 </html>
