--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,6 +1,6 @@
 
-<form method="get" action="/quizes/answer">    	
-  <p>Pregunta: <%= pregunta%></p>
+<form method="get" action="/quizes/<%= quiz.id %>/answer">    	
+  <p>Pregunta: <%= quiz.pregunta%></p>
   <input name="respuesta" type="text" placeholder="Reponda aquí..."f">
   <input type="submit" value="Enviar" >
 </form>
