--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,7 @@
+<form method="get" action="/quizes">
+	<input type="text" style="width: 200px;" name="search" placeholder="bucar pregunta..." />
+	<input type="submit" value="Enviar" />
+</form>
 <table>
 	<%	
 	 var i; for(i=0; i < quizes.length;i++) {
