--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,6 @@
 <form method="get" action="/quizes">
 	<input type="text" style="width: 200px;" name="search" placeholder="bucar pregunta..." />
-	<input type="submit" value="Enviar" />
+	<input type="submit" value="Buscar" />
 </form>
 <table>
 	<%	
