--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,15 @@
 		<span><a href="/quizes">Preguntas</a></span>
 		<span><a href="/author">Autor</a></span>
 	</nav>
-	<section class="main" id="s1">
+	<section class="main" id="s1">		
+		<% if(errors.length){%>
+			<span id="ErrorsMsgs">
+				Corregir errores:<br/>
+				<% for (var i in errors){%>
+					<span><%= errors[i].message %></span><br/>
+				<%}%>
+			</span>		
+		 <%} %>		
 		<div>			
 			<%- body%>
 		</div>
