--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,16 +3,28 @@
 	<input type="submit" value="Buscar" />
 </form>
 <table>
+	<tr>
+		<td>Tema</td>
+		<td>&nbsp;&nbsp;</td>
+		<td>Pregunta</td>
+		<td>&nbsp;&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
 	<%	
 	 var i; for(i=0; i < quizes.length;i++) {
 	 %>	 
 		<tr>
+			<td><%= quizes[i].tema %></td>
+			<td>&nbsp;&nbsp;</td>
 			<td>
 				<a href="/quizes/<%= quizes[i].id%>"><%= quizes[i].pregunta%></a>
 			</td>
+			<td>&nbsp;&nbsp;</td>
 			<td>
 				<a href="/quizes/<%= quizes[i].id%>/edit"><button>editar</button></a>
 			</td>
+			<td>&nbsp;</td>
 			<td>
 				<form method="post" action="/quizes/<%= quizes[i].id%>?_method=delete">
 					<button type="submit" onclick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
