--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -4,3 +4,12 @@
   <input name="respuesta" type="text" placeholder="Reponda aquí..."f">
   <input type="submit" value="Enviar" >
 </form>
+
+<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
+<div>
+  <p><strong>Comentarios:</strong></p>
+  <% console.log(quiz.Comments);
+    for(index in quiz.Comments){%>
+    <p>- <%=quiz.Comments[index].texto%></p>
+  <%}%>
+</div>
