--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -11,9 +11,7 @@
 		<td>&nbsp;</td>
 		<td>&nbsp;</td>
 	</tr>
-	<%	
-	 var i; for(i=0; i < quizes.length;i++) {
-	 %>	 
+	<%	var i; for(i=0; i < quizes.length;i++) { %>	 
 		<tr>
 			<td><%= quizes[i].tema %></td>
 			<td>&nbsp;&nbsp;</td>
@@ -21,6 +19,7 @@
 				<a href="/quizes/<%= quizes[i].id%>"><%= quizes[i].pregunta%></a>
 			</td>
 			<td>&nbsp;&nbsp;</td>
+			<%if(session.user){%>
 			<td>
 				<a href="/quizes/<%= quizes[i].id%>/edit"><button>editar</button></a>
 			</td>
@@ -30,7 +29,10 @@
 					<button type="submit" onclick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
 				</form>
 			</td>
+			<% } %>
 		</tr>
 	<% } %>
 </table><p>
+<% if(session.user){ %>
 <a href="/quizes/nuevo"><button type="button">Crear pregunta</button></a>
+<% } %>
